k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reverie
  labels:
    app: reverie
  annotations:
    cloud.google.com/backend-config: '{"default": "reverie-backend"}'
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: reverie
