k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reverie
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "truth-ip"
spec:
  defaultBackend:
    service:
      name: reverie
      port:
        number: 80
